# haze

./: .gitignore  AdjustExpression.cpp  AdjustExpression.h  Allocation.cpp  Allocation.h  AllocationType.h  Allocator.cpp  Allocator.h  ArchitectureType.h  ArgumentExpression.cpp  ArgumentExpression.h  AsmStatement.cpp  AsmStatement.h  AssemblerLinker.cpp  AssemblerLinker.h  AssemblerParser.cpp  AssemblerParser.h  AssemblerToolchain.cpp  AssemblerToolchain.h  AutoErrorContext.cpp  AutoErrorContext.h  AutoJob.cpp  AutoJob.h  Bimap.h  BinaryCommandType.h  BinaryConstants.h  BinaryExpression.cpp  BinaryExpression.h  BinaryExpressionType.h  BinaryUtilities.cpp  BinaryUtilities.h  BranchCommandType.h  CMakeLists.txt  ColorIntrinsic.cpp  ColorIntrinsic.h  Command.cpp  Command.h  CommandLineOptions.h  CommandLineParser.cpp  CommandLineParser.h  (+287 more)
async/: async.vcxproj  async.vcxproj.filters
compiler/: VerifyNotice.ps1  compiler.vcxproj  compiler.vcxproj.filters
debugger/: cargo.toml  debugger.vcxproj  debugger.vcxproj.filters
include/: BinaryConstants.h  BinaryUtilities.h  Constants.h  Context.h  File.h  Generator.h  IntegerLiteral.h  IntermediateOptimizer.h  Linkable.h  Log.h  Symbol.h  SymbolDatabase.h  Token.h  Type.h  TypeType.h  Variable.h  VariableType.h  X86Builder.h  X86Instruction.h  X86InstructionType.h  X86JccInstructionType.h  X86Register.h
kernel/: kernel.vcxproj  kernel.vcxproj.filters
microcode/: microcode.py
output/: test.sln
source/: AdjustExpression.cpp  Allocation.cpp  Allocator.cpp  ArgumentExpression.cpp  AssemblerLinker.cpp  AssemblerParser.cpp  AssemblerToolchain.cpp  AutoErrorContext.cpp  AutoJSON.cpp  AutoJob.cpp  Bimap.cpp  BinaryExpression.cpp  BinaryUtilities.cpp  Error.cpp  (+69 more)
source (old)/: Allocator.cpp  ColorIntrinsic.h  CompilerLinker.cpp  CompilerLinker.h  Disassembler.cpp  Emitter.cpp  EmitterType.h  HazeBuilder.cpp  HazeBuilder.h  Hook.cpp  HookTopicBuilder.h  InstructionEncoding.h  InterpreterParser.cpp  InterpreterParser.h  InterpreterToolchain.h  Intrinsic.h  Preprocessor.cpp  Preprocessor.h  Simulator.cpp  Simulator.h  X86BuilderValidator.h  X86Emitter.cpp  X86Emitter.h
(+539 files in other folders)
